Верстка сайта Наполнение сайта текстом и изображениями

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,101 @@
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h1 {
+  font-family: Proxima Nova;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 58px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: rgba(0, 0, 0, 1);
 }
+h2 {
+  font-family: Proxima Nova;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 30px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: rgba(0, 0, 0, 1);
+}
+h3 {
+  font-family: Proxima Nova;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: rgba(0, 0, 0, 1);
+}
+p, li {
+  font-family: Proxima Nova;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.app__content.main_overview a {
+  font-family: Proxima Nova;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.app__footer.info ul {
+  display: inline;
+}
+
+.app__header {
+  background-color: #EEEEEE;
+}
+
+.app__footer.info {
+  background-color: #F5F5F5;
+  color: rgba(0, 0, 0, 1);
+}
+
+.img_plates {
+  width: 120px;
+  height: 120px;
+  
+  background: #F5F5F5;
+  border: 1px solid #DDDDDD;
+  box-sizing: border-box;
+  border-radius: 3px;
+}
+.product_image {
+  width: 440px;
+  height: 440px;
+}
+.arrows {
+  height: 40px;
+  width: 21.55px;
+}
+
+button {
+  width: 380px;
+  height: 60px;
+
+  color: rgba(255, 255, 255, 1);
+  background: #000000;
+  border-radius: 5px;
+}
+.accept_button {
+  width: 179px;
+}
+.disaccept_button {
+  width: 179px;
+  background: rgba(0, 0, 0, 0.6);
+}
+/*.app__step_one, .app__step_two, .app__step_three, .app__step_four, .app__step_five {
+  visibility: hidden;
+}*/
