--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+body {
+  padding: 0;
+  margin: 0;
+}
+
 h1 {
   font-family: Proxima Nova;
   font-size: 48px;
@@ -39,47 +44,53 @@ p, li {
   color: rgba(0, 0, 0, 0.6);
 }
 
-.app__content.main_overview a {
-  font-family: Proxima Nova;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 22px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: rgba(0, 0, 0, 0.6);
-}
-
-.app__footer.info ul {
-  display: inline;
-}
-
-.app__header {
-  background-color: #EEEEEE;
-}
+/* Footer */
 
 .app__footer.info {
   background-color: #F5F5F5;
+}
+.app__footer.info ul {
+  display: inline;
+  color: rgba(0, 0, 0, 1);
+}
+.app__footer.info li {
   color: rgba(0, 0, 0, 1);
 }
 
-.img_plates {
-  width: 120px;
-  height: 120px;
+/* Header */
+
+.app__header {
+  position: relative;
+  top: -32px;
   
-  background: #F5F5F5;
-  border: 1px solid #DDDDDD;
-  box-sizing: border-box;
-  border-radius: 3px;
+  height: 176px;
+  background-color: #EEEEEE;
 }
-.product_image {
+.header__text {
+  position: relative;
+  width: 700px;
+  top: 20px;
+  left: 50px;
+
+  padding: 0;
+}
+.header__text h1 {
+  margin-bottom: 0;
+}
+.header__text p {
+  width: 529px;
+  margin-top: 10px;
+  font-size: 24px;
+}
+.banner_picture {
+  position: absolute;
   width: 440px;
-  height: 440px;
+  height: 165px;
+  left: 767px;
+  top: 11px;
 }
-.arrows {
-  height: 40px;
-  width: 21.55px;
-}
+
+
 
 button {
   width: 380px;
@@ -96,6 +107,127 @@ button {
   width: 179px;
   background: rgba(0, 0, 0, 0.6);
 }
+
+.app__content {
+  position: relative;
+}
+
+/* Product */
+
+.product {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  left: 50px;
+}
+
+/* Product block */
+.product__gallery {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  
+  width: 650px;
+  height: 560px;
+  
+  box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+
+  padding: 30px;
+}
+.image_selector {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+  width: 120px;
+}
+.image_selector a {
+  height: 40px;
+  width: 120px;
+  margin-top: 9.23px;
+  margin-bottom: 9.23px;
+  text-align: center;  
+}
+.arrows {
+  height: 40px;
+  width: 21.55px;
+}
+.img_plates {
+  width: 120px;
+  height: 120px;
+  
+  background: #F5F5F5;
+  border: 1px solid #DDDDDD;
+  box-sizing: border-box;
+  border-radius: 3px;
+
+  margin: 15px;
+}
+.product_image {
+  width: 440px;
+  height: 440px;
+}
+
+/* About product */
+
+.product__description {
+  width: 480px;
+}
+
+/* Product Overview */
+
+.product_overview {
+  position: relative;
+  left: 50px;
+}
+
+.product_overview h1 {
+  margin: 0;
+}
+.product_overview h3 {
+  margin: 20px 0 0
+}
+.product_overview p {
+  margin: 10px 0;
+  width: 650px;
+}
+.product_overview ul {
+  padding: 0 17.5px;
+}
+.product_overview li {
+  margin: 10px 0;
+}
+
+.read_more{
+  color: rgba(0, 0, 0, 0.6);
+}
+
+/* How it works */
+
+.app__how_it_work {
+  position: relative;
+  left: 50px;
+}
+
+.steps {
+  display: flex;
+  align-items: center;
+}
+.steps a {
+  width: 180px;
+  height: 180px;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background: #FFFFFF;
+  box-shadow: 0px 10px 20px rgba(94, 94, 94, 0.1);
+  border-radius: 50%;
+}
+
 /*.app__step_one, .app__step_two, .app__step_three, .app__step_four, .app__step_five {
   visibility: hidden;
 }*/
