--- a/src/App.css
+++ b/src/App.css
@@ -50,30 +50,18 @@ button {
   align-items: center;
 }
 
-/* Footer */
-
-.app__footer.info {
-  background-color: #F5F5F5;
-}
-.app__footer.info ul {
-  display: inline;
-  color: rgba(0, 0, 0, 1);
-}
-.app__footer.info li {
-  color: rgba(0, 0, 0, 1);
-}
-
 /* Header */
 
 .app__header {
-  position: relative;
-  top: -32px;
+  position: absolute;
+  top: 0;
   
+  width: 1280px;
   height: 176px;
   background-color: #EEEEEE;
 }
 .header__text {
-  position: relative;
+  position: absolute;
   width: 700px;
   top: 20px;
   left: 50px;
@@ -81,7 +69,7 @@ button {
   padding: 0;
 }
 .header__text h1 {
-  margin-bottom: 0;
+  margin: 0;
 }
 .header__text p {
   width: 529px;
@@ -96,7 +84,37 @@ button {
   top: 11px;
 }
 
+/* Footer */
 
+.app__footer {
+  position: absolute;
+
+  width: 1280px;
+  height: 228px;
+  top: 1698px;
+}
+.info {
+  display: flex;
+  justify-content: flex-start;
+
+  height: 166px;
+  padding-left: 50px;
+  background-color: #F5F5F5;
+}
+.info ul {
+  width: 150px;
+  color: rgba(0, 0, 0, 1);
+
+  margin-right: 252px;
+  padding-left: 0;
+}
+.info li {
+  list-style-type: none;
+  color: rgba(0, 0, 0, 1);
+}
+.app__footer p {
+  margin-left: 50px;
+}
 
 button {
   width: 380px;
@@ -115,23 +133,32 @@ button {
 }
 
 .app__content {
-  position: relative;
+  position: absolute;
+
+  width: 1280px;
+  height: 1132px;
+  top: 176px;
 }
 
 /* Product */
 
 .product {
-  position: relative;
+  position: absolute;
   display: flex;
   flex-direction: row;
+  top: 50px;
   left: 50px;
+
+  width: 1180px;
+  height: 560px;
 }
 
 /* Product block */
+
 .product__gallery {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   
   width: 650px;
@@ -140,21 +167,20 @@ button {
   box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
 
-  padding: 30px;
+  padding: 0;
 }
 .image_selector {
   display: flex;
   flex-direction: column;
   align-items: center;
-  
-  width: 120px;
+
+  height: 500px;
+  margin-left: 30px;
 }
 .image_selector a {
   height: 40px;
-  width: 120px;
-  margin-top: 9.23px;
-  margin-bottom: 9.23px;
-  text-align: center;  
+  width: 40px;
+  text-align: center;
 }
 .arrows {
   height: 40px;
@@ -169,27 +195,109 @@ button {
   box-sizing: border-box;
   border-radius: 3px;
 
-  margin: 15px;
+  margin: 7.5px 0;
 }
 .product_image {
   width: 440px;
   height: 440px;
+  margin-right: 30px;
 }
 
 /* About product */
 
 .product__description {
+  margin-left: 50px;
+
   width: 480px;
 }
-.price {
+.product__description h2 {
+  margin-top: 20px;
+}
+.description {
+  width: 352px;
+}
+.product_top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  margin-top: 9px;
+  width: 480px;
+  height: 22px;
+}
+.product_top h3 {
+  text-transform: uppercase;
+}
+
+.product_rating {
+  display: flex;
+  align-items: center;
+
+  padding: 0;
+}
+.product_rating p {
+  margin: 0 0 0 10px;
+}
+.rating_stars{
+  width: 88px;
+  height: 16px;
+}
+.items {
+  font-size: 16px;
+  text-transform: uppercase;
+  font-weight: bold;
+
+  height:32px;
+  width:144px;
+  background: rgba(228, 0, 0, 1);
+}
+.buy_product {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 380px;
+}
+.select_button {
+  font-size: 16px;
+  text-transform: uppercase;
+  font-weight: bold;
+
+  font-size: 18px;
+  width: 380px;
+  margin: 20px 0;
+}
+.prices {
+  display: flex;
+  align-items: flex-end;
+
+  margin-top: 30px;
+  height: 57px;
+  width: 380px;
+  border-top: 1px solid rgba(196, 196, 196, 1);
+}
+.product__price {
   text-decoration: line-through;
+  text-transform: uppercase;
+  margin-bottom: 0;
+}
+.product__new_price {
+  margin-left: 10px;
+  margin-bottom: 0;
+}
+.amazon_prime_logo {
+  width: 200px;
+  height: 34.65px;
 }
 
 /* Product Overview (MainContent) */
 
 .product_overview {
-  position: relative;
+  position: absolute;
+  top: 650px;
   left: 50px;
+
+  width: 650px;
+  height: 422px;
 }
 
 .product_overview h1 {
@@ -210,13 +318,14 @@ button {
 }
 
 .read_more{
+  font-weight: bold;
   color: rgba(0, 0, 0, 0.6);
 }
 
 /* Step 1 */
 
 .app__step_one {
-  position: relative;
+  position: absolute;
   display: flex;
   
 }
@@ -224,7 +333,7 @@ button {
 /* Step 2 */
 
 .app__step_two {
-  position: relative;
+  position: absolute;
   display: flex;
 
 }
@@ -232,7 +341,7 @@ button {
 /* Step 3 */
 
 .app__step_three {
-  position: relative;
+  position: absolute;
   display: flex;
 
 }
@@ -240,7 +349,7 @@ button {
 /* Step 4 */
 
 .app__step_four {
-  position: relative;
+  position: absolute;
   display: flex;
 
 }
@@ -248,7 +357,7 @@ button {
 /* Step 5 */
 
 .app__step_five {
-  position: relative;
+  position: absolute;
   display: flex;
 
 }
@@ -262,8 +371,9 @@ button {
 /* How it works */
 
 .app__how_it_work {
-  position: relative;
+  position: absolute;
   left: 50px;
+  top: 1275px;
 }
 
 .steps {
@@ -273,8 +383,8 @@ button {
   width: 1280px;
 }
 .steps a {
-  width: 180px;
-  height: 180px;
+  min-width: 180px;
+  min-height: 180px;
   
   display: flex;
   justify-content: center;
@@ -284,7 +394,23 @@ button {
   box-shadow: 0px 10px 20px rgba(94, 94, 94, 0.1);
   border-radius: 50%;
 }
-.steps .rights,.steps a {
+.step_rows {
+  display: flex;
+  align-items: center;
+}
+.step {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  height: 212px;
+  width: 180px;
+}
+.rights {
+  width: 24px;
+  height: 16.52px;
+}
+.steps .rights, .steps a {
   margin: 0 23px;
 }
 /*.app__step_one, .app__step_two, .app__step_three, .app__step_four, .app__step_five {
